testing/macro-tests/tests/ui/relation_many_suffix_required.stderr
error: relation field ident 'users' must end with '_ids'
  --> tests/ui/relation_many_suffix_required.rs:32:23
   |
32 |         field(ident = "users", value(many, item(rel = "User", prim = "Ulid")))
   |                       ^^^^^^^
